--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,2 +1,4 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+play.filters.headers.frameOptions = null
+play.filters.headers.contentSecurityPolicy = null
